# Alicia-D-Leader-ROS

./: .gitignore  README.md
alicia_duo_leader_dashboard/: CMakeLists.txt  package.xml
alicia_duo_leader_dashboard/launch/: dashboard.launch.py
alicia_duo_leader_dashboard/scripts/: dashboard_node.py
alicia_duo_leader_dashboard/static/: index.html
alicia_duo_leader_dashboard/static/robot/: model.urdf
alicia_duo_leader_dashboard/static/robot/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
alicia_duo_leader_driver/: CMakeLists.txt  package.xml
alicia_duo_leader_driver/include/serial_server_node/: serial_server_node.h
alicia_duo_leader_driver/launch/: serial_server.launch.py
alicia_duo_leader_driver/msg/: ArmJointState.msg
alicia_duo_leader_driver/scripts/: alicia_driver_node.py  arm_read_demo.py  serial_data_type_node.py  servo_control_node.py  servo_states_node.py
alicia_duo_leader_driver/src/: serial_server_node.cpp  serial_server_node_main.cpp
arm_joint_state_dashboard/: CMakeLists.txt  package.xml
arm_joint_state_dashboard/launch/: dashboard.launch.py
arm_joint_state_dashboard/scripts/: dashboard_node.py
arm_joint_state_dashboard/static/: index.html
config/: joint_config_template.yaml
examples/: alicia_duo_zero_calibration.py
